fixed liking bug not showing in profile

--- a/client/src/components/landingPage/searchbar/searchbar.css
+++ b/client/src/components/landingPage/searchbar/searchbar.css
@@ -9,6 +9,7 @@
 .image_container {
   justify-content: space-around;
   max-width: 400px;
+  display: flex;
 }
 
 .searchbar_image {
